--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 # Created by https://www.gitignore.io/api/c++,cmake,clion,macos
 # Edit at https://www.gitignore.io/?templates=c++,cmake,clion,macos
 
+### Smart contract files ###
+*.abi
+*.wasm
+
 ### C++ ###
 # Prerequisites
 *.d
