CmakeList file 수정, Variable Set  add

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,16 @@
 cmake_minimum_required(VERSION 3.12)
 project(EOSLuckyDice)
-
 find_package(eosio.cdt)
-add_contract( hello hello src/hello.cpp)
+
+
+# Variable Setting
+SET(CONTRACT_NAME dice)     # SET Contract name
+SET(WASM_NAME dice)         # SET WASM name
+SET(CPP src/dice.cpp)       # SET Source Code File
+add_contract( ${CONTRACT_NAME} ${WASM_NAME} ${CPP})
+
+# add_contract( {Contract Name} {WASM Name} {src/cpp} )
+# add_contract( dice dice src/dice.cpp)
+
+
 
